[gd_scene load_steps=6 format=3 uid="uid://b4qcijggwn06n"]

[ext_resource type="Texture2D" uid="uid://dfoylyuv2gfax" path="res://Sprites/Character Portraits/Guy1.png" id="1_dgv81"]
[ext_resource type="Script" uid="uid://c3w34cll6limc" path="res://Scripts/lobby.gd" id="1_lrd0j"]

[sub_resource type="Gradient" id="Gradient_robt6"]
offsets = PackedFloat32Array(0, 0.277108, 0.704819, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.233334, 0, 1, 1, 0.083928, 0.784989, 0.570671, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8w0yt"]
gradient = SubResource("Gradient_robt6")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0bfsc"]
bg_color = Color(0.2, 0.2, 0.2, 0.705882)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.664226, 0.781159, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="Lobby" type="Node2D"]
script = ExtResource("1_lrd0j")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, -2.50002)
scale = Vector2(4.53125, 669)
texture = SubResource("GradientTexture1D_8w0yt")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = -544.0
offset_top = -296.0
offset_right = -280.0
offset_bottom = 296.0

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="Control/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0bfsc")

[node name="Player" type="Label" parent="Control/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Player 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="Control/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0bfsc")

[node name="Player" type="Label" parent="Control/VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "Player 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 126.0
offset_top = -319.0
offset_right = 559.0
offset_bottom = 298.0

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Character" type="ColorRect" parent="Control/VBoxContainer2/MarginContainer"]
layout_mode = 2
color = Color(0.41, 0.882, 1, 1)

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer2/MarginContainer"]
layout_mode = 2
texture = ExtResource("1_dgv81")
expand_mode = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Left" type="Button" parent="Control/VBoxContainer2/HBoxContainer2/MarginContainer"]
layout_mode = 2
text = "<"

[node name="MarginContainer2" type="MarginContainer" parent="Control/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Right" type="Button" parent="Control/VBoxContainer2/HBoxContainer2/MarginContainer2"]
layout_mode = 2
text = ">"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer2/HBoxContainer/MarginContainer"]
layout_mode = 2
text = "Name"

[node name="MarginContainer2" type="MarginContainer" parent="Control/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Username" type="LineEdit" parent="Control/VBoxContainer2/HBoxContainer/MarginContainer2"]
layout_mode = 2
placeholder_text = "Player"

[node name="MarginContainer2" type="MarginContainer" parent="Control/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Description" type="Label" parent="Control/VBoxContainer2/MarginContainer2"]
layout_mode = 2
text = "Description"

[connection signal="pressed" from="Control/VBoxContainer/Start" to="." method="startGame"]
[connection signal="pressed" from="Control/VBoxContainer2/HBoxContainer2/MarginContainer/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Control/VBoxContainer2/HBoxContainer2/MarginContainer2/Right" to="." method="_on_right_pressed"]
